Possible fix for weird navbar text alignment

--- a/web/src/components/Header/styles.scss
+++ b/web/src/components/Header/styles.scss
@@ -21,7 +21,7 @@
 		color: $font-light-color !important;
 	}
 
-	.nav-link {
+	.nav-item {
 		margin-right: 2rem;
 	}
 
